# ranged-reader-rs

./: Cargo.toml  README.md
.github/workflows/: test.yaml
examples/s3_parquet/: Cargo.toml
examples/s3_parquet/src/: main.rs
src/: lib.rs  stream.rs  sync.rs
tests/it/: main.rs  parquet_s3.rs  parquet_s3_async.rs  stream.rs  sync.rs
