[package]
name = "range-reader"
version = "0.2.0"
license = "Apache-2.0"
description = "Converts low-level APIs to read ranges of bytes to `Read + Seek`"
homepage = "https://github.com/DataEngineeringLabs/ranged-reader-rs"
repository = "https://github.com/DataEngineeringLabs/ranged-reader-rs"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3", optional = true }

[features]
default = ["sync", "async"]
sync = []
async = ["futures"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs"] }
tokio-util = { version = "0.6", features = ["compat"] }
parquet2 = { version = "0.7" }
rust-s3 = { version = "0.27", features = ["blocking", "futures"] }
